fix: overlapping color bug

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -138,15 +138,6 @@ header nav {
     z-index: 1;
 }
 
-@media(max-height: 550px) {
-    header nav {
-        overflow-y: scroll;
-        max-height: 70%;
-        /* overflow-y: unset;
-        max-height: unset; */
-    }
-}
-
 header nav::before {
     content: '';
     position: absolute;
@@ -159,6 +150,17 @@ header nav::before {
     background-color: #E8E8E8;
     opacity: 0.5;
     z-index: -1;
+}
+
+@media(max-height: 550px) {
+    header nav {
+        overflow-y: scroll;
+        max-height: 70%;
+    }
+
+    header nav::before {
+        background-color: unset;
+    }
 }
 
 header nav * {
